# MyonEngine

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  vcpkg.json  xmake.lua
Libraries/: default.nix
MyonSandbox/src/: Application.cpp
Shaders/: vertshader.vert
assets/shaders/: computeshader.wgsl
myon/Core/: CMakeLists.txt  xmake.lua
myon/Core/include/MyonCore/Core/: Engine.hpp  Log.hpp  Window.hpp
myon/Core/include/MyonCore/Graphics/: GraphicsAPI.hpp
myon/Core/include/MyonCore/Graphics/Vulkan/: VulkanAPI.hpp  VulkanAllocator.hpp  VulkanBuffer.hpp  VulkanCfg.hpp  VulkanCommandBuffers.hpp  VulkanDescriptorPool.hpp  VulkanDescriptorSetLayout.hpp  VulkanDescriptorSets.hpp  VulkanDevice.hpp  VulkanFramebuffer.hpp  VulkanGraphicsPipeline.hpp  VulkanImageViews.hpp  VulkanInstance.hpp  VulkanRenderPass.hpp  VulkanRenderer.hpp  VulkanStructs.hpp  VulkanSurface.hpp  VulkanSwapChain.hpp  VulkanSyncObjects.hpp  VulkanUtils.hpp  VulkanValidationLayer.hpp  VulkanVertexBuffer.hpp
myon/Core/include/MyonCore/Graphics/WebGPU/: WebGPUAPI.hpp  WebGPUAdapter.hpp  WebGPUBuffer.hpp  WebGPUCommandQueue.hpp  WebGPUComputePipeline.hpp  WebGPUDevice.hpp  WebGPUInstance.hpp  WebGPUSurface.hpp  WebGPUUtils.hpp
myon/Core/include/MyonCore/Layers/: Layer.hpp  LayerStack.hpp
myon/Core/include/MyonCore/RHI/: RHI.hpp
myon/Core/include/MyonCore/Renderer/: Renderer.hpp  WebGPURenderer.hpp
myon/Core/include/MyonCore/Utils/: Time.hpp
myon/Core/src/MyonCore/Core/: Engine.cpp  Log.cpp  Window.cpp
myon/Core/src/MyonCore/Graphics/: GraphicsAPI.cpp
myon/Core/src/MyonCore/Graphics/Vulkan/: VulkanAPI.cpp  VulkanAllocator.cpp  VulkanBuffer.cpp  VulkanCommandBuffers.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSets.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanImageViews.cpp  VulkanInstance.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSyncObjects.cpp  VulkanValidationLayer.cpp  VulkanVertexBuffer.cpp
myon/Core/src/MyonCore/Graphics/WebGPU/: WebGPUAPI.cpp  WebGPUAdapter.cpp  WebGPUBuffer.cpp  WebGPUCommandQueue.cpp  WebGPUComputePipeline.cpp  WebGPUDevice.cpp  WebGPUInstance.cpp  WebGPUSurface.cpp  WebGPUUtils.cpp
myon/Core/src/MyonCore/Layers/: LayerStack.cpp
myon/Core/src/MyonCore/Renderer/: Renderer.cpp  WebGPURenderer.cpp
myon/Sandbox/: CMakeLists.txt  xmake.lua
myon/Sandbox/resources/: Info.plist
myon/Sandbox/src/: Application.cpp
myon/backend/: CMakeLists.txt
myon/backend/include/MyonBackend/Core/: Engine.hpp  Log.hpp  Window.hpp
myon/backend/include/MyonBackend/Graphics/: GraphicsAPI.hpp  VulkanInstance.hpp
myon/backend/include/MyonBackend/Graphics/Vulkan/: VulkanAPI.hpp  VulkanDevice.hpp  VulkanInstance.hpp  VulkanPhysicalDevice.hpp  VulkanValidationLayer.hpp
myon/backend/src/MyonBackend/Core/: Engine.cpp  Log.cpp  Window.cpp
myon/backend/src/MyonBackend/Graphics/: GraphicsAPI.cpp  VulkanInstance.cpp
myon/backend/src/MyonBackend/Graphics/Vulkan/: VulkanAPI.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanValidationLayer.cpp
myonbackend/: CMakeLists.txt
myonbackend/include/LOEBackend/Core/: Engine.hpp  Log.hpp  Window.hpp
myonbackend/include/MyonBackend/Core/: Engine.hpp  Log.hpp  Window.hpp
myonbackend/src/LOEBackend/Core/: Engine.cpp  Log.cpp  Window.cpp
myonbackend/src/MyonBackend/Core/: Engine.cpp  Log.cpp  Window.cpp
myonfrontend/: CMakeLists.txt
myonfrontend/src/: Application.cpp
